# green-ac

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  pyproject.toml
.github/: codecov.yml
.github/workflows/: build_wheels.yml  test.yaml
cmake/: FindGMP.cmake  GreenDeps.cmake
python/: main.cpp  nevanlinna.cpp  nevanlinna.h
python/green_ac/: __init__.py
src/: CMakeLists.txt  nevanlinna.cpp
src/green/ac/: common_defs.h  except.h  gmp_float.h  mpfr_float.h  nevanlinna.h
test/: CMakeLists.txt  ac_test.cpp  gmp_float_test.cpp  mpfr_float_test.cpp  nevanlinna_test.py
test/data/: X_iw.txt  X_w.txt
